# easy-macros

./: .gitignore  Cargo.toml  README.md
-main-crate/: Cargo.toml  README.docify.md  README.md  test.sh
-main-crate/src/: examples.rs  lib.rs
-main-crate/src/macro_tests/: mod.rs
all-syntax-cases/: Cargo.toml  README.md
all-syntax-cases-helpers/: Cargo.toml  README.md
all-syntax-cases-helpers/src/: lib.rs  matched_check.rs  matched_check_no_fields.rs  struct_check.rs
all-syntax-cases/src/: helpers.rs  lib.rs
all-syntax-cases/src/all_syntax_cases/: data.rs  mod.rs  search.rs
all-syntax-cases/tests/: documentation_claims_test.rs  simple_test.rs  smart_unwrapping_comprehensive_test.rs  smart_unwrapping_test.rs
always-context/: Cargo.toml  README.md  test.sh
always-context-build/: Cargo.toml  README.md
always-context-build/src/: lib.rs
always-context/src/: context_gen.rs  lib.rs  search.rs
always-context/src/always_context/: mod.rs
always-context/src/context_gen/: context_arg.rs
anyhow-result/: Cargo.toml  README.md
anyhow-result/src/: lib.rs
attributes/: Cargo.toml  README.md  build.rs  test.sh
attributes-macros/: Cargo.toml  README.docify.md  README.md
attributes-macros/src/: examples.rs  fields_get_attributes.rs  fields_with_attributes.rs  get_attributes.rs  has_attributes.rs  lib.rs
attributes-macros/src/data/: attr_with_unknown.rs  input.rs  mod.rs
attributes/src/: examples.rs  internal.rs  lib.rs
context-internal/: Cargo.toml  README.md
context-internal/src/: lib.rs
helpers/: Cargo.toml  README.docify.md  README.md  test.sh
helpers-context/: Cargo.toml
helpers-context/src/: lib.rs
helpers-macro-safe/: Cargo.toml  README-CRATES-IO.md  README.docify.md  README.md
helpers-macro-safe/examples/: error_data_basic.rs  error_data_custom.rs  expr_error_wrap_basic.rs  expr_error_wrap_custom.rs  expr_error_wrap_detailed.rs  find_crate_basic.rs  find_crate_list_basic.rs  indexed_name_basic.rs  indexed_name_detailed.rs  macro_result_add.rs  macro_result_basic.rs  macro_result_braced.rs  macro_result_detailed.rs  macro_result_finalize.rs  parse_macro_input_usage.rs
helpers-macro-safe/src/: examples.rs  expr_error_wrap.rs  find_crate.rs  indexed_name.rs  lib.rs  macro_result.rs  readable_token_stream.rs  token_stream_to_consistent_string.rs  tokens_builder.rs
helpers/src/: context.rs  context_tests.rs  examples.rs  expr_error_wrap.rs  indexed_name.rs  lib.rs  macro_result.rs  parse_macro_input.rs  readable_token_stream.rs  token_stream_to_consistent_string.rs
helpers/src/tests/: context.rs  mod.rs  readable_token_stream.rs
macro-result/: Cargo.toml
macro-result/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros2/: Cargo.toml
macros2/src/: lib.rs  macro_result.rs
macros2/src/always_context/: mod.rs
macros2/src/context_internal/: mod.rs
macros3/: Cargo.toml
macros3/src/all_syntax_cases/: data.rs  mod.rs
macros4/: Cargo.toml
macros4/src/: lib.rs  matched_check.rs
proc_macro_tests/: Cargo.toml  README.md
proc_macro_tests/src/: lib.rs
scripts/: pr.sh  publish.sh  readme_join.sh  switch_to_local_deps.sh  switch_to_version_deps.sh  test.sh  test_with_local_deps.sh
scripts/readme_join_helpers/: Readme_Start.md
src/: lib.rs
src/macro_tests/: mod.rs
