[package]
name = "easy-macros"
version = "1.0.0"
edition = "2024"

[dependencies]
# Hover and click on the version number to see their documentation

# Procedural macros
all-syntax-cases = { path = "./all-syntax-cases", optional = true }
always-context = { path = "./always-context", optional = true }
attributes = { path = "./attributes", optional = true }
macro-result = { path = "./macro-result", optional = true }

always-context-build = { path = "./always-context-build", optional = true }

# Helpers for creating procedural macros
helpers = { path = "./helpers", optional = true }
helpers-context = { path = "./helpers-context", optional = true }

syn = { version = "2.0", features = ["full","extra-traits"], optional = true }
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }
anyhow = { version = "1", optional = true }


[dev-dependencies]
# Procedural macro tests
proc_macro_tests = { path = "./proc_macro_tests" }
all-syntax-cases = { path = "./all-syntax-cases" }

syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"


[features]
default = []
for-macro = [
    "dep:all-syntax-cases",
    "dep:always-context",
    "dep:attributes",
    "dep:macro-result",
    "dep:helpers",
    "dep:syn",
    "dep:quote",
    "dep:proc-macro2",
    "dep:anyhow",
]
general = ["dep:always-context", "dep:helpers-context"]
build = ["dep:always-context-build"]
