[package]
name = "easy-macros"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
# Hover and click on the version number to see their documentation

# Procedural macros
all-syntax-cases = {package = "easy-macros-all-syntax-cases",path = "./all-syntax-cases", optional = true }
always-context = { package = "easy-macros-always-context", path = "./always-context", optional = true }
attributes = { package = "easy-macros-attributes", path = "./attributes", optional = true }
anyhow-result = { package = "easy-macros-anyhow-result", path = "./anyhow-result", optional = true }

always-context-build = { package = "easy-macros-always-context-build", path = "./always-context-build", optional = true }

# Helpers for creating procedural macros
helpers = { package = "easy-macros-helpers", path = "./helpers", optional = true }

syn = { version = "2.0", features = ["full","extra-traits"], optional = true }
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }
anyhow = { version = "1", optional = true }


[dev-dependencies]
# Procedural macro tests
proc-macro-tests = { package = "easy-macros-proc-macro-tests", path = "./proc_macro_tests" }
all-syntax-cases = { package = "easy-macros-all-syntax-cases", path = "./all-syntax-cases" }

syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"


[features]
default = []
for-macro = [
    "dep:all-syntax-cases",
    "dep:always-context",
    "dep:attributes",
    "dep:anyhow-result",
    "dep:helpers",
    "dep:syn",
    "dep:quote",
    "dep:proc-macro2",
    "dep:anyhow",
    "helpers/full"
]
easy-sql = ["always-context/easy-sql"]
general = ["dep:always-context", "dep:helpers", "helpers/context"]
build = ["dep:always-context-build"]
