[package]
name = "all-syntax-cases-helpers"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
# Hover and click on the version number to see their documentation
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

helpers-macro-safe = { path = "../helpers-macro-safe" }
