[package]
name = "easy-macros-all-syntax-cases-helpers"
version = "0.1.0"
edition = "2024"

description = "Easy Macros support library"
readme = "README-CRATES-IO.md"

license = "Apache-2.0"
authors = ["LimitLost (JQ) <jq@limitlost.com>"]
documentation = "https://docs.rs/easy-macros"
homepage = "https://github.com/LimitLost/easy-macros"
repository = "https://github.com/LimitLost/easy-macros"

[lib]
proc-macro = true

[dependencies]
# Hover and click on the version number to see their documentation
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

helpers = { package = "easy-macros-helpers", version = "0.1.0", features = ["indexed-name"] }
