[package]
name = "easy-macros-all-syntax-cases"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
# Hover and click on the version number to see their documentation
syn = {version="2.0",features = ["full","extra-traits"]}
quote = "1.0"
proc-macro2 = "1.0"

all-syntax-cases-helpers = { package = "easy-macros-all-syntax-cases-helpers", path = "../all-syntax-cases-helpers" }

[dev-dependencies]
all-syntax-cases = { package = "easy-macros-all-syntax-cases", path = "." }

syn = {version="2.0",features = ["visit-mut"]}