[package]
name = "easy-macros-always-context-build"
version = "0.1.0"
edition = "2024"

[dependencies]
syn = { version = "2.0", features = ["full"] }
anyhow = "1.0.97"
regex = "1.11.1"
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }

always-context = { package = "easy-macros-always-context", path = "../always-context" }
helpers = { package = "easy-macros-helpers", path = "../helpers", features = ["full"] }