[package]
name = "always-context"
version = "1.0.0"
edition = "2024"
rust-version = "1.88" # From this version, proc-macro can use span-locations feature without nightly

[lib]
proc-macro = true

[dependencies]
# Hover and click on the version number to see their documentation
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = { version = "1.0.100", features = ["span-locations"] }

replace_with = "0.1.7"

all-syntax-cases = { path = "../all-syntax-cases" }

helpers = { path = "../helpers" }

[features]
# Easy SQL integration
easy_sql = []