[package]
name = "attributes-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
# Hover and click on the version number to see their documentation
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# Allows to get crate from main Cargo.toml
proc-macro-crate = "3.3.0"

anyhow = "1"
lazy_static = "*"
regex = "1.11.1"


anyhow-result = { path = "../anyhow-result" }
always-context = { path = "../always-context" }
helpers = { path = "../helpers" }

[build-dependencies]
always-context-build = { path = "../always-context-build" }
