[package]
name = "easy-macros-attributes-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[features]
generate-readme = []
easy-sql = []

[dependencies]
# Hover and click on the version number to see their documentation
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# Allows to get crate from main Cargo.toml
proc-macro-crate = "3.3.0"

anyhow = "1"
lazy_static = "*"
regex = "1.11.1"


anyhow-result = { package = "easy-macros-anyhow-result", path = "../anyhow-result" }
always-context = { package = "easy-macros-always-context", path = "../always-context" }
helpers = { package = "easy-macros-helpers", path = "../helpers" }
docify = "0.4.1"

[build-dependencies]
always-context-build = { package = "easy-macros-always-context-build", path = "../always-context-build" }

[dev-dependencies]
attributes = { package = "easy-macros-attributes", path = "../attributes" }
helpers = { package = "easy-macros-helpers", path = "../helpers", features = ["context"] }
anyhow = "1"
