[package]
name = "easy-macros-attributes-macros"
version = "0.1.0"
edition = "2024"

description = "Easy Macros support library"
readme = "README-CRATES-IO.md"

license = "Apache-2.0"
authors = ["LimitLost (JQ) <jq@limitlost.com>"]
documentation = "https://docs.rs/easy-macros"
homepage = "https://github.com/LimitLost/easy-macros"
repository = "https://github.com/LimitLost/easy-macros"

[lib]
proc-macro = true

[features]
generate-readme = []
easy-sql = []

[dependencies]
# Hover and click on the version number to see their documentation
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# Allows to get crate from main Cargo.toml
proc-macro-crate = "3.3.0"

anyhow = "1"
lazy_static = "*"
regex = "1.11.1"


anyhow-result = { package = "easy-macros-anyhow-result", path = "../anyhow-result" }
always-context = { package = "easy-macros-always-context", path = "../always-context" }
helpers = { package = "easy-macros-helpers",  version = "0.1.0" }
docify = "0.4.1"

[build-dependencies]
always-context-build = { package = "easy-macros-always-context-build", path = "../always-context-build" }

[dev-dependencies]
attributes = { package = "easy-macros-attributes", path = "../attributes" }
helpers = { package = "easy-macros-helpers", version = "0.1.0", features = ["context"] }
anyhow = "1"
