[package]
name = "attributes"
version = "0.1.0"
edition = "2024"

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

anyhow = "1"
lazy_static = "*"
regex = "1.11.1"

always-context = { path = "../always-context" }
helpers = { path = "../helpers" }

attributes-macros = { path = "../attributes-macros" }

[build-dependencies]
always-context-build = { path = "../always-context-build" }
