[package]
name = "easy-macros-attributes"
version = "0.1.0"
edition = "2024"

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

anyhow = "1"
lazy_static = "*"
regex = "1.11.1"

always-context = { package = "easy-macros-always-context", path = "../always-context" }
helpers = { package = "easy-macros-helpers", path = "../helpers", features = ["context"] }
attributes-macros = { package = "easy-macros-attributes-macros", path = "../attributes-macros" }

[features]
easy-sql = ["attributes-macros/easy-sql"]

[build-dependencies]
always-context-build = { package = "easy-macros-always-context-build", path = "../always-context-build" }
