[package]
name = "easy-macros-attributes"
version = "0.1.0"
edition = "2024"

description = "Easy Macros support library"
readme = "README-CRATES-IO.md"

license = "Apache-2.0"
authors = ["LimitLost (JQ) <jq@limitlost.com>"]
documentation = "https://docs.rs/easy-macros"
homepage = "https://github.com/LimitLost/easy-macros"
repository = "https://github.com/LimitLost/easy-macros"

[dependencies]
syn = { version = "2.0", features = ["full","extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

anyhow = "1"
lazy_static = "*"
regex = "1.11.1"

always-context = { package = "easy-macros-always-context", path = "../always-context" }
helpers = { package = "easy-macros-helpers", version = "0.1.0", features = ["context"] }
attributes-macros = { package = "easy-macros-attributes-macros", path = "../attributes-macros" }

docify = "0.4.1"

[features]
generate-readme = []
easy-sql = ["attributes-macros/easy-sql"]

[build-dependencies]
always-context-build = { package = "easy-macros-always-context-build", path = "../always-context-build" }
