[package]
name = "easy-macros-helpers-macro-safe"
description = "Easy Macros support library"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["LimitLost (JQ) <jq@limitlost.com>"]
repository = "https://github.com/LimitLost/easy-macros"
homepage = "https://github.com/LimitLost/easy-macros"
documentation = "https://docs.rs/easy-macros"
keywords = ["procedural-macros", "proc-macro", "macros", "utilities", "helpers"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns"]
readme = "README-CRATES-IO.md"

[dependencies]
# Hover and click on the version number to see their documentation
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

replace_with = "0.1.7"

# Allows to get crate from main Cargo.toml
proc-macro-crate = "3.3.0"

# Docify for external example files
docify = "0.4.1"