[package]
authors = ["LimitLost (JQ) <jq@limitlost.com>"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns"]
description = "Easy Macros support library"
documentation = "https://docs.rs/easy-macros"
edition = "2024"
homepage = "https://github.com/LimitLost/easy-macros"
keywords = ["procedural-macros", "proc-macro", "macros", "utilities", "helpers"]
license = "Apache-2.0"
name = "easy-macros-helpers"
readme = "README-CRATES-IO.md"
repository = "https://github.com/LimitLost/easy-macros"
version = "0.1.0"

[dependencies]

context-internal = { package = "easy-macros-context-internal", path = "../context-internal", optional = true}

proc-macro2 = {version = "1.0", optional = true}
quote = {version = "1.0", optional = true}
syn = {version = "2.0", features = ["full"], optional = true}

replace_with = {version = "0.1.7", optional = true}

# Allows to get crate from main Cargo.toml
proc-macro-crate = {version = "3.3.0", optional = true}

docify = "0.4.1"

[dev-dependencies]
anyhow = {version = "1.0"}

[features]
context = ["dep:context-internal"]
expr-error-wrap = ["dep:syn", "dep:replace_with"]
find-crate = ["dep:proc-macro-crate", "dep:proc-macro2", "dep:quote", "dep:syn"]
full = [
  "context",
  "indexed-name",
  "tokens-builder",
  "expr-error-wrap",
  "readable-token-stream",
  "find-crate",
  "token-stream-consistent",
  "parse-macro-input",
]
generate-readme = []
indexed-name = ["dep:quote", "dep:syn"]
parse-macro-input = []
readable-token-stream = []
token-stream-consistent = ["dep:proc-macro2"]
tokens-builder = ["dep:proc-macro2", "dep:quote", "dep:replace_with"]
