[package]
name = "proc_macro_tests"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
# Hover and click on the version number to see their documentation
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

attributes = { path = "../attributes" }

context-internal = { path = "../context-internal" }
always-context = { path = "../always-context" }
macro-result = { path = "../macro-result" }


helpers = { path = "../helpers" }
